fixed table IE issue, fixed navigation bar alignment

--- a/website/style.css
+++ b/website/style.css
@@ -1,58 +1,51 @@
- <!--CSS code-->
-<style type="text/css">
-	 .header{
-	 background-color:black;
-	 border-style:outset;
-	 border-width:5px;
-	 border-color:white;
+	.header{
+	 	background-color:black;
+	 	border-style:outset;
+	 	border-width:5px;
+	 	border-color:white;
 	 }
-        body {
+	 body {
            	color:white;
 	       font: bold large cursive;
           	text-align:center;
 	       background-color:#800000;
 		padding: 5px 5px 5px 5px;
-         }
-	  table,th,td{
+        }
+	 table,th,td{
 		border:3px solid black;
 		background-color:grey;
-		width:50%;
-		margin-left:25%;
-		margin-right:25%;
+		/*width:50%;*/
+		margin-left:auto;
+		margin-right:auto;
 		margin-top:30pt;
 		margin-bottom:40pt;
 		padding: 4px;
 		table-layout:fixed;
-	  }
-	  ul
-	  {
-		float:center;
-		width:80%;
-		margin-right:10%;
-		margin-left:10%;
-		padding-top:0px;
-		margin-bottom:100px;
+	 }
+	 ul{
 		list-style-type:none;
+		width:80%;
+		margin-right:auto;
+		margin-left:auto;
+		padding:0; /*caused center issue*/
 		background-color:white;
 		border-style:outset;
 		border-width:5px;
-		border-color:maroon;
-		
-	   }
-	   li {display:inline-block;
-	   	font-size:30px;
-		padding: 10px;
-		margin-top: 10px;
-	   }
-	   a
-	   {	
+		border-color:maroon	
+	  }	
+	  li{
+		display:inline-block;
+		font-size:30px;
+		padding: 30px;
+  	  }
+	  a
+	  {	
 		float:center;
-		width:6em;
+		/*width:6em;*/
 		text-decoration:underline;
 		color:maroon;
-		padding:0;
-	    }
-	    h1{
-	    color:maroon;
-	    }
-      </style>
+		/*padding:0;*/
+	  }
+	  h1{
+	       color:maroon;
+	  }
